# fether

./: .gitignore  .gitmodules  2  ;  [  package.json  pnpm-lock.yaml  startup.sh  startup.zsh  todos.ts  turbo.json
apps/REDACTED_SERVER/: README.md  package.json
apps/REDACTED_SERVER/src/: index.ts
apps/client/: .gitignore  package.json  remix.config.js  tailwind.config.js  tailwind.config.ts
apps/client/api/: index.js  index.js.map
apps/client/app/: entry.client.tsx  root.tsx  tailwind.css  types.d.ts
apps/client/app/components/: BackgroundLines.tsx  ConnectButton.tsx  Dashboard.tsx  DashboardSelector.tsx  Footer.tsx  InviteFriendsModal.tsx  Navbar.tsx  OldSetupWizard.tsx  PersonalDashboard.tsx  PopupModal.tsx  SetupPage.tsx  SetupSteps.tsx  SetupWizard.tsx  TeamDashboard.tsx  TxViewer.tsx  WalletProvider.tsx  setupSteps.ts  setupSteps.tsx
apps/client/app/routes/: _index.tsx  alpha.dashboard.tsx  alpha.login.tsx  alpha.post-install.ts  alpha.sign-out.tsx  alpha.team.$teamId.join.$inviteCode.tsx  alpha.team.$teamId.leave.tsx  alpha.team.$teamId.tsx  alpha.tsx  alphaAccessKeySession.ts  alphaSession.ts  api.gh-app-install.ts  api.gh-callback.ts  api.keygen.ts  api.post-install.ts  gh-callback.ts  keygen.server.ts  keygen.ts
apps/client/app/styles/: app.css
apps/client/app/utils/: helpers.ts  (+11 more)
apps/client/styles/: app.css
apps/fether-server/: .gitignore  package.json  tsconfig.json  vercel.json
apps/fether-server-remix/: package.json  remix.config.js  tsconfig.json
apps/fether-server-rs/: Cargo.toml
apps/fether-server-rs/src/: main.rs  utils.rs
apps/fether-server-rs/src/fether_routes/: fetherkit.rs  mod.rs  payload.rs  rpc.rs
apps/fether-server/src/: index.ts
apps/solidity/cache/: solidity-files-cache.json
apps/solidity/src/: Counter.sol  SecretKeeper.sol  TestContract.sol
apps/solidity/test/: Counter.t.sol
apps/testing-client/: package.json  remix.config.js
apps/testing-client/app/: root.tsx
apps/trace-frontend/: .env  package.json
apps/trace-frontend/pages/: [txhash].tsx  index.tsx
old-apps/fether-server/: package.json  tsconfig.json  vercel.json
old-apps/fether-server/src/: index.ts
(+23 files in other folders)
