[package]
name = "fether-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
axum = "0.7.3"
axum-macros = "0.4.1"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql"] }
anyhow = "1.0.79"
