[package]
name = "fether-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
axum = "0.7.3"
axum-macros = "0.4.1"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["time","runtime-tokio", "mysql","runtime-tokio-native-tls"] }
anyhow = "1.0.79"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json"] }
either = "1.10.0"
tower-http = {version = "0.5.1", features = ["cors"]}
alloy-core = { version = "0.6.2", features = ["json-abi", "dyn-abi"] }
chrono = "0.4.34"
ethers-core = "2.0.14"
